dataset trained notebook

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ env/
 .ipynb_checkpoints/
 # cattle_disease_model.h5
 # cattle_disease_model.keras
-Dataset_training.ipynb
+# Dataset_training.ipynb
 
